# FilFinder

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGE.rst  LICENSE.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  new_test_script.py  pyproject.toml  setup.cfg  setup.py  test_script.py  tox.ini
.github/workflows/: main.yml  publish.yml
docs/: Filament2D_tutorial.rst  Makefile  algorithm.rst  conf.py  curve_direc.rst  docs.rst  fil_finder_2D.rst  fil_finder_2d.rst  filament_profiles.rst  filfinder.rst  index.rst  install.rst  length.rst  make.bat  old_tutorial.rst  pixel_ident.rst  requirements.txt  rtd-pip-requirements  tutorial.html  tutorial.ipynb  tutorial.rst  width.rst
docs/_build/doctrees/: algorithm.doctree  analysis.doctree  docs.doctree  environment.pickle  fil_finder_2D.doctree  index.doctree  install.doctree  length.doctree  pixel_ident.doctree  tutorial.doctree  width.doctree
docs/_build/html/: .buildinfo  algorithm.html  analysis.html  docs.html  fil_finder_2D.html  genindex.html  install.html  length.html  objects.inv  pixel_ident.html  search.html  searchindex.js  tutorial.html  width.html
examples/: FilFinder Tutorial.ipynb  Filament2D_tutorial.ipynb  SIM@260PC.csv  SIM@260PC_mask.fits  SIM@260PC_skeletons.fits  chamaeleon I.csv  example_filament_profile.py  example_simfilaments.py  fil_finder Tutorial.ipynb  filaments_updatedhdr.fits  new_test_script.py  old_example.py  patch_vs_noise_figure.py  tutorial.ipynb  tutorial_old.ipynb
examples/paper_figures/: README.md  brightness_skeleton_hist.py  bulk_analysis.py  check_vs_350.py  ks_plots.py  make_disperse_figure.py  make_online_figures.py  make_pipe_figures.py  match_resolution.py  orientations_analysis.py  patch_vs_thresh_figure.py  run_gouldbelt.py
fil_finder/: __init__.py  _astropy_init.py  analysis.py  base_conversions.py  comparisons.py  conftest.py  cores.py  curvature.py  diagnostics.py  filament.py  filfind_class.py  filfinder2D.py  filfinder3D.py  filfinderPPP.py  filfinderPPV.py  io_funcs.py  length.py  pixel_ident.py  rollinghough.py  skeleton3D.py  threshold_local_3D.py  utilities.py  width.py
fil_finder/FilFinder3D/: FilFinder3D.py  ngc4321_subset.fits  notes.txt  project_test.py  test_graph.py
fil_finder/tests/: __init__.py  _testing_data.py  setup_package.py  test_baseclasses.py  test_filament2D.py  test_filamentPPP.py  test_filamentPPV.py  test_init.py  test_input_types.py  test_lengths.py  test_profiles.py  test_rht.py  test_utilities.py  test_whole.py  test_whole_simplefilament.py  test_widths.py  testing_utils.py
fil_finder/width_profiles/: __init__.py  profile.py  profile_line_width.py
(+28 files in other folders)
