[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = fil_finder
description = Detection of filamentary structure in molecular clouds
long_description = This package implements tools for the comparison of radio data cubes.
author = Eric Koch and Erik Rosolowsky
author_email = koch.eric.w@gmail.com
license = MIT
url = http://fil-finder.readthedocs.io
edit_on_github = True
github_project = e-koch/FilFinder

[check_deps]

[entry_points]