[metadata]
name = fil_finder
author = Eric Koch and Erik Rosolowsky
author_email = koch.eric.w@gmail.com
license = MIT
license_file = LICENSE.rst
url = http://fil-finder.readthedocs.io
description = Detection of filamentary structure in molecular clouds
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = e-koch/FilFinder

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    networkx
    scipy
    matplotlib
    scikit-image
    h5py


[options.extras_require]
test =
    pytest-astropy
    pytest-cov
    h5py
docs =
    sphinx-astropy
    sphinx_bootstrap_theme

[options.package_data]
fil_finder.tests = data/*

[tool:pytest]
testpaths = "fil_finder" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    fil_finder/_astropy_init*
    fil_finder/conftest.py
    fil_finder/*setup_package*
    fil_finder/tests/*
    fil_finder/*/tests/*
    fil_finder/extern/*
    fil_finder/version*
    */fil_finder/_astropy_init*
    */fil_finder/conftest.py
    */fil_finder/*setup_package*
    */fil_finder/tests/*
    */fil_finder/*/tests/*
    */fil_finder/extern/*
    */fil_finder/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
